--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,7 +181,7 @@ body {
   margin: 0 auto;
   border-radius: 2%;
   max-width: 400px;
-  border: solid 3px #753a88;
+  border: solid 1px #753a88;
   border-radius: 50%;
 }
 #presentation h1,
@@ -198,7 +198,7 @@ body {
 }
 h1 {
   font-size: 1.6em;
-  margin: 15px 0 5px 0;
+  margin-bottom: 5px;
 }
 h2 {
   font-size: 1.3em;
