--- a/styles/about.css
+++ b/styles/about.css
@@ -3,6 +3,9 @@
   border-bottom: solid 1px;
   border-color: #753a88;
 }
+#about main p {
+  text-align: justify;
+}
 #about footer {
   text-align: center;
   padding-top: 20px;
