--- a/styles/about.css
+++ b/styles/about.css
@@ -3,11 +3,20 @@
   border-bottom: solid 1px;
   border-color: #753a88;
 }
+#about .profile-pic {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+  border-radius: 2%;
+  max-width: 400px;
+  border: solid 1px #753a88;
+  border-radius: 50%;
+}
 #about main p {
   text-align: justify;
 }
 #about footer {
-  text-align: center;
+  text-align: right;
   padding-top: 20px;
 }
 #about footer .cv-btn {
@@ -29,6 +38,20 @@
 }
 #about footer .cv-btn img {
   margin-left: 5px;
+}
+@media (min-width: 601px) {
+  #about {
+    padding: 0 0 72px 0;
+  }
+}
+@media (min-width: 801px) {
+  #about main .profile-pic {
+    float: left;
+    margin-right: 50px;
+  }
+  #about header h1 {
+    margin: 100px 0 30px 0;
+  }
 }
 @media (min-width: 601px) {
   #presentation section {
