meu site versao 2024

--- a/styles/about.css
+++ b/styles/about.css
@@ -3,38 +3,78 @@
   border-bottom: solid 1px;
   border-color: #753a88;
 }
+#about main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+#about .profile-pic {
+  width: 70%;
+  display: block;
+  border-radius: 2%;
+  border: solid 1px #753a88;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+#about main div {
+  width: 95%;
+  text-align: center;
+}
 #about main p {
-  text-align: justify;
+  text-align: left;
+  margin-bottom: 15px;
 }
 #about footer {
   text-align: center;
   padding-top: 20px;
 }
-#about footer .cv-btn {
-  display: inline-block;
+#about .cv-btn {
   padding: 1px;
   background-color: #8d1e41;
   border-radius: 25px;
   padding: 15px;
+  float: right;
   -webkit-transition: background-color 2s ease-out;
   -moz-transition: background-color 2s ease-out;
   -o-transition: background-color 2s ease-out;
   transition: background-color 2s ease-out;
 }
-#about footer .cv-btn:hover {
+#about .cv-btn:hover {
   background-color: #753a88;
 }
-#about footer .cv-btn:hover {
+#about .cv-btn:hover {
   cursor: pointer;
 }
-#about footer .cv-btn img {
+#about .cv-btn img {
   margin-left: 5px;
 }
 @media (min-width: 601px) {
+  #about main div {
+    width: 70%;
+    text-align: center;
+  }
+
+  #about main {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  #about .profile-pic {
+    width: 25%;
+    margin-bottom: 0;
+  }
+
   #presentation section {
     justify-content: center;
   }
   #presentation section a img {
     margin: 0 25px;
+  }
+}
+@media (min-width: 801px) {
+  #about main {
+    align-items: center;
   }
 }
